[package]
name = "steam_trading_notice"
version = "0.1.0"
edition = "2024"

[dependencies]
config = "0.15"
dotenvy = "0.15"
reqwest = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.15"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
zip = "7"

[dependencies.lettre]
version = "0.11"
default-features = false
features = [
    "builder",
    "hostname",
    "pool",
    "serde",
    "smtp-transport",
    "tokio1-rustls-tls",
    "tracing"
]
